--- a/_webdesign/css/general.css
+++ b/_webdesign/css/general.css
@@ -30,6 +30,12 @@ h3 {
     font-weight: 500;
 }
 
+h4 {
+    font-size: var(--sm-fs);
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
 h5 {
     font-size: var(--xs-fs);
     font-weight: 900;
