--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -66,36 +66,9 @@ input[type=text], input[type=password], input[type=email] {
     padding: 10px 0px;
 }
 
-/* Horizontal slider */
-.horizontal-slider-container {
-    margin-right: -15px;
-}
-.horizontal-slider {
-    overflow: scroll;
-    white-space: nowrap;
-}
+/* Quizzes */
 
-.horizontal-slider>.quiz { 
-    display: inline-block;
-}
-
-.horizontal-slider>.quiz-3x { 
-    width: 30.333333%;
-    margin-right: 3%;
-}
-
-.horizontal-slider>.quiz-2-5x { 
-    width: 40%;
-    margin-right: 3%;
-}
-
-
-.horizontal-slider>.quiz:last-of-type { 
-    margin-right: 0px;
-}
-
-.horizontal-slider>.quiz>.quiz-thumb{
-    height: 170px;
+.quiz>.quiz-thumb{
     width: 100%; 
 
     background-repeat: no-repeat;
@@ -113,13 +86,198 @@ input[type=text], input[type=password], input[type=email] {
     -webkit-filter: blur(2px);*/
 }
 
-.horizontal-slider>.quiz>.quiz-thumb>h5{
+.quiz>.quiz-thumb>h5{
     white-space: break-spaces;
     padding: 10px;
     margin: 0;
 }
 
-.horizontal-slider>.quiz>.label {
+.quiz>.label {
     text-align: center;
     padding-top: 5px;
 }
+
+.quiz-2x>.quiz-thumb{
+    height: 200px;
+}
+
+.quiz-3x { 
+    width: 30.333333%;
+    margin-right: 3%;
+}
+
+.quiz-3x>.quiz-thumb{
+    height: 170px;
+}
+
+.quiz-2-5x { 
+    width: 40%;
+    margin-right: 3%;
+}
+
+/* Horizontal slider */
+.horizontal-slider-container {
+    margin-right: -15px;
+}
+.horizontal-slider {
+    overflow: scroll;
+    white-space: nowrap;
+}
+
+.horizontal-slider>.quiz { 
+    display: inline-block;
+}
+
+
+.horizontal-slider>.quiz:last-of-type { 
+    margin-right: 0px;
+}
+
+/* FontAwesome */
+.fa-gradient {
+	background: -webkit-gradient(linear, left top, right top, from(var(--orange-primary)), to(var(--red-primary)));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+/* Badges */
+.badge {
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px 0px #00000059;
+}
+
+.badge i {
+    padding: 15px;
+    font-size: 45px;
+    color: white;
+}
+
+/* Badge detail */
+.badge-detail {
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    background-color: var(--light-primary);
+    position: fixed;
+    top: 0;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.badge-detail>a {
+    display: block;
+    width: 100%;
+    text-align: right;
+    margin-bottom: 20px;
+}
+
+.badge-detail>.badge-detail-container {
+    text-align: center;
+}
+
+.badge-detail .badge-description {
+    background-color: white;
+    margin-top: -50px;
+    padding: 20px;
+    padding-top: 80px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 10px 0px #00000059;
+}
+
+.badge-detail .badge-description>h4 {
+    text-transform: none;
+}
+
+.badge-detail .badge-detail-container>.badge>i {
+    font-size: 90px;
+    padding: 30px;
+}
+
+
+
+/* Nav tabs */
+#tabs-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+#tabs-bar>.tab-button {
+    width: 100%;
+    border: none;
+    font-size: var(--sm-fs);
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 5px 0;
+    border-radius: 20px 20px 0px 0px;
+    color: var(--dark-secondary);
+    box-shadow: 3px -3px 5px -1px #00000040;
+
+}
+
+#tabs-bar>.tab-selected {
+    background-color: white;
+    color: var(--dark-primary);
+}
+
+/* Score table */
+.score-table {
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+}
+
+.score-table tr {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.score-table img {
+    max-width: 50px;
+}
+
+.score-table a {
+    font-weight: inherit;
+}
+
+.score-table small, .score-table b {
+    display: block;
+}
+
+.score-table small {
+    font-size: 80%;
+}
+
+.score-table td, .score-table th {
+    padding: 10px 0;
+    vertical-align: top;
+    font-size: var(--sm-fs);
+}
+
+.score-table>tbody>tr>td:first-of-type {
+    font-weight: bolder;
+    width: 15%;
+    text-align: left;
+}
+
+.score-table>tbody>tr>td:last-child {
+    width: 60%;
+    padding-left: 20px;
+}
+
+.score-table tr.my-score {
+    background-color: var(--light-primary);
+    position: sticky;
+    width: 120%;
+    padding: 0 30px;
+    margin: 0 -10%;
+    bottom: 0;
+    border: none;
+    box-shadow: 3px -2px 10px 0px #00000040;
+}
+
+
