--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -51,3 +51,11 @@ small {
     font-size: var(--sm-fs);
     font-weight: 300;
 }
+
+.container {
+    width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
+}
