--- a/resources/css/regions.css
+++ b/resources/css/regions.css
@@ -6,6 +6,9 @@
     overflow: hidden;
     border-radius: 15px;
     background-color: var(--dark-secondary);
+    background-position: center;
+    background-size: cover;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .region>img {
@@ -20,9 +23,15 @@
     width: inherit;
     border-radius: 15px;
     padding:12px;
+    width: 100%;
 }
 
 .region>.card-text>h4 {
     margin: 0;
     text-align: center;
+}
+
+/* Region views */
+#regional-scores {
+
 }
