--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -59,3 +59,17 @@ small {
     margin-right: auto;
     margin-left: auto;
 }
+
+.rounded {
+    border-radius: 20px!important;
+}
+
+.rounded-top {
+    border-top-left-radius: 20px!important;
+    border-top-right-radius: 20px!important;
+}
+
+.rounded-bottom {
+    border-bottom-left-radius: 20px!important;
+    border-bottom-right-radius: 20px!important;
+}
