--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -3,3 +3,25 @@
     height: auto;
     margin: auto;
 }
+
+/* Desktop design */
+@media screen and (min-width: 768px) {
+    #login {
+        position: relative;
+        top: 50px;
+        background-color: white;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 50px;
+        border-radius: 20px;
+        box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
+        
+    }
+
+    #login-logo {
+        max-width: 50%;
+        height: auto;
+        float: right;
+    }
+}
