--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -19,7 +19,19 @@ a:hover, a:active, a:focus {
     border: none; 
     border-radius: 25px;
     margin-top: 10px;
-} 
+}
+
+.btn-square {
+    border-radius: 10px;
+}
+
+@media screen and (min-width: 768px) {
+    .btn {
+        padding: 12px;
+        font-size: var(--sm-fs);
+        line-height: var(--sm-fs);
+    }
+}
 
 .btn-gradient {
     color: var(--light-primary);
@@ -153,6 +165,12 @@ input[type=text], input[type=password], input[type=email] {
     color: white;
 }
 
+@media screen and (min-width: 768px) {
+    .badge i {
+        font-size: 50px;
+    }
+}
+
 /* Badge detail */
 .badge-detail {
     width: 100vw;
@@ -161,6 +179,7 @@ input[type=text], input[type=password], input[type=email] {
     background-color: var(--light-primary);
     position: fixed;
     top: 0;
+    left: 0;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -280,6 +299,28 @@ input[type=text], input[type=password], input[type=email] {
     bottom: 0;
     border: none;
     box-shadow: 3px -2px 10px 0px #00000040;
+}
+
+@media screen and (min-width: 768px) {
+    .score-table a {
+        font-size: var(--xs-fs);
+    }
+
+    .score-table tr.my-score {
+        background-color: inherit;
+        position: inherit;
+        width: inherit;
+        padding: inherit;
+        margin: inherit;
+        border-bottom: 1px solid #dee2e6;
+        bottom: inherit;
+        box-shadow: inherit;
+    }
+
+    #scoreboard #vue-app {
+        max-height: 60%;
+        overflow: scroll;
+    }
 }
 
 /* Logout form */
