--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -74,6 +74,10 @@ small {
     border-bottom-right-radius: 20px!important;
 }
 
+.h-100 {
+    height: 100%;
+}
+
 /* Desktop design */
 @media screen and (min-width: 768px) {
     body {
@@ -87,8 +91,16 @@ small {
         box-shadow: inset 82.1333px -82.1333px 82.1333px rgba(166, 53, 20, 0.194), inset -82.1333px 82.1333px 82.1333px rgba(255, 255, 255, 0.194);
     }
 
-    #app {
-        min-width: 100vw;
-        min-height: 100vh;
+    .container {
+        margin: 0px;
+        max-width: 10000px;
     }
+
+    .box {
+        padding: 25px;
+        background-color: white;
+        border-radius: 20px;
+        box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
+    }
+
 }
