--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -7,8 +7,10 @@
 /* Desktop design */
 @media screen and (min-width: 768px) {
     #login {
+        grid-column-start: 4;
+        /*
         position: relative;
-        top: 50px;
+        top: 50px;*/
         background-color: white;
         max-width: 600px;
         margin-left: auto;
@@ -16,7 +18,6 @@
         padding: 50px;
         border-radius: 20px;
         box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
-        
     }
 
     #login-logo {
