--- a/resources/css/user-profile.css
+++ b/resources/css/user-profile.css
@@ -1,3 +1,9 @@
 .user-profile-img {
     max-width: 200px;
 }
+
+.page {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
+}
