Webdesign corrections on login, register and dashboard + Dashboard view debug

--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -49,7 +49,7 @@ a:hover, a:active, a:focus {
 }
 
 .btn-border {
-    background-color: transparent;
+    background-color: white;
     border: 1px solid var(--red-primary);
     color: var(--dark-primary);
 }
