--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -7,14 +7,11 @@
 /* Desktop design */
 @media screen and (min-width: 768px) {
     #login {
-        grid-column-start: 4;
-        /*
-        position: relative;
-        top: 50px;*/
-        background-color: white;
-        max-width: 600px;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 20px;
+        background-color: white;
+        max-width: 600px;
         padding: 50px;
         border-radius: 20px;
         box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
