--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -11,7 +11,7 @@
 
 
 @media screen and (min-width: 768px) {
-    body {
+    .grid-centered {
         display: grid;
         grid-template-columns: 15px 20% 15px auto 15px 20% 15px;
         grid-template-rows: 15px auto 15px;
