--- a/resources/css/menu.css
+++ b/resources/css/menu.css
@@ -1,10 +1,16 @@
 #desktop-menu {
-    display: none;
+    display: none!important;
     background-color: var(--red-secondary);
-    /*min-width: 200px;*/
+    min-width: 200px;
     padding: 15px;
     height: 100%;
     border-radius: 20px;
+    display: block;
+    position: fixed;
+    width: 20%;
+    bottom: 0;
+    margin: 15px;
+    height: auto;
 }
 
 #desktop-menu>.menu-group>h3, #desktop-menu>.menu-group a {
@@ -57,6 +63,6 @@
 
 @media screen and (min-width: 768px) {
     #desktop-menu {
-        display: block;
+        display: block!important;
     }
 }
