--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -123,6 +123,13 @@ input[type=text], input[type=password], input[type=email] {
     height: 170px;
 }
 
+@media screen and (min-width: 768px) {
+    .quiz-3x>.quiz-thumb{
+        height: auto;
+        min-height: 120px;
+    }
+}
+
 .quiz-2-5x { 
     width: 40%;
     margin-right: 3%;
