--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -78,6 +78,11 @@ small {
     height: 100%;
 }
 
+.alert {
+    margin: 0 15px;
+    z-index: 100;
+}
+
 /* Desktop design */
 @media screen and (min-width: 768px) {
     body {
