Adding the Morges Questions Clues

--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -83,6 +83,10 @@ small {
     z-index: 100;
 }
 
+.form-group img {
+    max-width: 100%;
+}
+
 /* Desktop design */
 @media screen and (min-width: 768px) {
     body {
