--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,6 +65,10 @@ body {
   background-color: #f8fafc;
 }
 
+.form-group img {
+  max-width: 100%;
+}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
