--- a/resources/css/gameMobile.css
+++ b/resources/css/gameMobile.css
@@ -1,7 +1,7 @@
 #game-map-mobile{
 
     z-index: 900;
-height: 100%;
+    height: 100%;
 }
 
 #drawer-button{
@@ -11,15 +11,11 @@ height: 100%;
     position: fixed;
     bottom: 0;
 
-    background-color: azure;
+    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
 }
 
-#drawer-button > .button{
+#drawer-button > .btn{
 
-    background-color: #000000; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -33,11 +29,12 @@ height: 100%;
     border: 0;
     background: transparent;
     z-index: 999;
-    border-radius: 100%;
+    border-radius: 20%;
     
-    position: fixed;
-    right: 50px;
-    top: 150px;
+    position: absolute;
+    top: 0%;
+    left: 75%;
+    
   
     /*position: absolute;
     top: 5%;
@@ -48,7 +45,7 @@ height: 100%;
 
   
   
-  .buttons-container > button {/*
+  .buttons-container > button {
     background-color: transparent;
     border: transparent;
     padding: 10px;
@@ -57,7 +54,7 @@ height: 100%;
     border-radius: 100%;
     height: 80px;
     width: 80px;
-    */
+   
   }
 
   .leaflet-marker-icon .leaflet-zoom-hide .leaflet-interactive{
@@ -66,4 +63,8 @@ height: 100%;
     width: 50px !important;
 
 
+  }
+
+  .modals {
+    position: absolute;
   }
