--- a/resources/css/gameMobile.css
+++ b/resources/css/gameMobile.css
@@ -2,6 +2,48 @@
 
     z-index: 900;
     height: 100%;
+    width: 100%;
+    position: absolute !important;
+    top: 0;
+    margin: 0;
+}
+
+.textQuestion{
+
+  text-align: justify;
+
+  padding-left: 1.5rem;
+  margin-top: 10px;
+  padding-right: 1.5rem;
+
+}
+
+#TitleQuestion,#TitleIndice{
+
+  font-size: 25px;
+  font-weight: 900;
+
+
+}
+
+.SkipCenter {
+
+  
+  text-align: center;
+  width: 100%;
+  
+
+}
+
+
+.btnSkip {
+
+  margin-top: 15px;
+  border: 0; 
+  background-color: transparent;
+
+  color: rgb(160, 160, 160);
+
 }
 
 #drawer-button{
@@ -13,7 +55,15 @@
 
     background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
 }
+/*
+#titleQuestion{
 
+  font-size: var(--h2-fs);
+  font-weight: 700;
+
+
+}
+*/
 #drawer-button > .btn{
 
   text-align: center;
@@ -23,6 +73,13 @@
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
+}
+
+.modal-body {
+
+  color: fuchsia;
+
+
 }
 
 .buttons-container {
@@ -68,3 +125,5 @@
   .modals {
     position: absolute;
   }
+
+  
