--- a/resources/css/mapdesktop.css
+++ b/resources/css/mapdesktop.css
@@ -1,13 +1,16 @@
    #game-map{
 
 
-    height: 100%;
-    width: 100%;
+    /*height: 100%;
+    width: 100%;*/
     position: absolute !important;
     top: 0;
     margin: 0;
     
-    
+   
+    right: 0;
+    left: 0;
+    bottom: 0;
     
     }
     .bodyMap > #desktop-menu{
@@ -63,6 +66,12 @@
         top:150px;
         
     
+    }
+
+    .leaflet-popup-content {
+        
+        width: 350px;
+        overflow-y: scroll;
     }
     
     .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar{
