--- a/resources/css/gameMobile.css
+++ b/resources/css/gameMobile.css
@@ -28,7 +28,7 @@
 
 .SkipCenter {
 
-  
+
   text-align: center;
   width: 100%;
   margin-bottom: 10px;
@@ -39,14 +39,32 @@
 
   background-color: blueviolet;
 
-  
+
 }
 
+.imageGamePopup
+{
+  text-align:center
+}
+
+.imageGamePopup>img{
+
+    width: 150px;
+	height: 150px;
+}
+
+.imageGamePopup>h2{
+
+   text-align: center;
+}
+.modal-footer{
+    text-align: center;
+}
 
 .btnSkip {
 
-  
-  border: 0; 
+
+  border: 0;
   background-color: transparent;
 
   color: rgb(160, 160, 160);
@@ -84,7 +102,7 @@
 
 .modal-body {
 
-  color: fuchsia;
+  color: black;
 
 
 }
@@ -94,12 +112,12 @@
     background: transparent;
     z-index: 999;
     border-radius: 20%;
-    
+
     position: absolute;
     top: 0%;
     left: 75%;
-    
-  
+
+
     /*position: absolute;
     top: 5%;
     right: 5%;
@@ -107,8 +125,8 @@
     z-index: 99999;*/
   }
 
-  
-  
+
+
   .buttons-container > button {
     background-color: transparent;
     border: transparent;
@@ -118,7 +136,7 @@
     border-radius: 100%;
     height: 80px;
     width: 80px;
-   
+
   }
 
   .leaflet-marker-icon .leaflet-zoom-hide .leaflet-interactive{
@@ -133,4 +151,3 @@
     position: absolute;
   }
 
-  
