--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -300,7 +300,7 @@ input[type=text], input[type=password], input[type=email] {
 }
 
 .score-table tr.my-score {
-    background-color: var(--light-primary);
+    background-color: #fff;
     position: sticky;
     width: 120%;
     padding: 0 30px;
@@ -316,18 +316,17 @@ input[type=text], input[type=password], input[type=email] {
     }
 
     .score-table tr.my-score {
-        background-color: inherit;
-        position: inherit;
+        background-color: #fff;
+        position: sticky;
         width: inherit;
-        padding: inherit;
-        margin: inherit;
+        padding: 0 25px;
+        margin: 0 -25px;
         border-bottom: 1px solid #dee2e6;
-        bottom: inherit;
-        box-shadow: inherit;
+        bottom: 0;
     }
 
     #scoreboard #vue-app {
-        max-height: 60%;
+        max-height: 100%;
         overflow: scroll;
     }
 }
