--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -263,7 +263,9 @@ input[type=text], input[type=password], input[type=email] {
     display: flex;
     align-items: center;
     border-bottom: 1px solid #dee2e6;
+    justify-content: space-around;
 }
+
 
 .score-table img {
     background-color: var(--light-primary);
@@ -327,7 +329,7 @@ input[type=text], input[type=password], input[type=email] {
 
     #scoreboard #vue-app {
         max-height: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
     }
 }
 
