--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -15,6 +15,26 @@ h1, h2, h3, h4, h5, h6, p, a {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+.imgQuizContainer{
+
+   
+
+   
+    
+}
+
+.imgQuiz{
+
+    
+    
+   /* -webkit-filter: blur(10px);  Safari 6.0 - 9.0 
+  filter: blur(10px);*/
+  
+    object-fit: none;
+    margin-bottom: 20px;
+    
+}
+
 h1 {
     font-size: var(--h1-fs);
     font-weight: 900;
