Modal mobile game Css Fixes

--- a/resources/css/gameMobile.css
+++ b/resources/css/gameMobile.css
@@ -18,7 +18,13 @@
 
 }
 
-#TitleQuestion,#TitleIndice{
+.btnAlone{
+
+  display: contents;
+
+}
+
+#TitleQuestion,#TitleIndice , .modal-title{
 
   font-size: 25px;
   font-weight: 900;
