--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -104,6 +104,7 @@ input[type=text], input[type=password], input[type=email] {
     white-space: break-spaces;
     padding: 10px;
     margin: 0;
+    width: 120px;
 }
 
 .quiz>.label {
@@ -112,16 +113,23 @@ input[type=text], input[type=password], input[type=email] {
 }
 
 .quiz-2x>.quiz-thumb{
-    height: 200px;
+    margin-top: 15px;
+    max-height: 230px;
+   padding-top: 140%;
 }
-
+/*
 .quiz-3x { 
     width: 30.333333%;
     margin-right: 3%;
-}
+}*/
 
 .quiz-3x>.quiz-thumb{
-    height: 170px;
+    /*height: 170px;*/
+    margin-top: 15px;
+    max-height: 136px;
+   padding-top: 140%;
+
+   
 }
 
 @media screen and (min-width: 768px) {
@@ -147,6 +155,8 @@ input[type=text], input[type=password], input[type=email] {
 
 .horizontal-slider>.quiz { 
     display: inline-block;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 
