--- a/resources/css/user-profile.css
+++ b/resources/css/user-profile.css
@@ -8,3 +8,9 @@
     border-bottom-right-radius: 20px;
     box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.25);
 }
+
+@media screen and (min-width: 768px) {
+    .page {
+        min-height: 50vh;
+    }
+}
