--- a/resources/css/gameMobile.css
+++ b/resources/css/gameMobile.css
@@ -68,22 +68,23 @@
 }
 
 .btnSkip {
-
-
   border: 0;
   background-color: transparent;
-
   color: rgb(160, 160, 160);
-
+  padding-left: 25px;
+  padding-bottom: 10px;
+}
+.btnClue{
+  width: 70%;
+}
+#btnClueCont{
+  text-align: center;
 }
 
 #drawer-button{
-
     z-index: 10000;
-
     position: fixed;
     bottom: 0;
-
     background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
 }
 /*
